frontend/tests/cases/negative/interfaces/kind-mismatch/badKindInInstanceConstraint.gr
data A = A

data B = B

interface Simple a

-- 'B' is not a valid constraint
instance {B} => Simple A
